# vtk-rs

./: .clang-format  .clangd  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  generate_headers.sh  linker-args.txt
.github/workflows/: generate_tests.py  header-comparison.yml  reuse.yml  test.yml  test_beta_macos-13.yml  test_beta_macos-14.yml  test_beta_ubuntu-20.04.yml  test_beta_ubuntu-20_04.yml  test_beta_ubuntu-22_04.yml  test_beta_ubuntu-24_04.yml  test_beta_ubuntu-latest.yml  test_beta_windows-latest.yml  test_nightly_macos-13.yml  test_nightly_macos-14.yml  test_nightly_ubuntu-20_04.yml  test_nightly_ubuntu-22.04.yml  test_nightly_ubuntu-22_04.yml  test_nightly_ubuntu-24_04.yml  test_nightly_ubuntu-latest.yml  test_nightly_windows-latest.yml  test_stable_macos-13.yml  test_stable_macos-14.yml  test_stable_macos-15.yml  test_stable_macos-16.yml  test_stable_macos-26.yml  test_stable_ubuntu-20_04.yml  test_stable_ubuntu-22_04.yml  test_stable_ubuntu-24_04.yml  test_stable_ubuntu-latest.yml  test_stable_windows-latest.yml
libvtk/: CMakeLists.txt  ObjectBase.cpp  ObjectBase.h  libvtk.h
libvtkrs/: CMakeLists.txt  ObjectBase.cpp  vtkNamedColors.cpp  vtkNamedColors.h  vtkObject.cpp  vtkObject.h  vtkObjectBase.cpp  vtkObjectBase.h  vtkSphere.cpp  vtkSphere.h  vtkSphereSource.cpp  vtkSphereSource.h
libvtkrs/include/: cxx_sphere.h  cxx_sphere.rs.h  poly_data_mapper.h  poly_data_mapper.rs.h  sphere_source.h  vtkPolyDataMapper.h  vtkPolyDataMapper.rs.h  vtk_abstract_mapper.h  vtk_abstract_mapper_3d.rs.h  vtk_algorithm.h  vtk_algorithm.rs.h  vtk_data_object.h  vtk_data_object.rs.h  vtk_executive.rs.h  vtk_information.h  vtk_information.rs.h  vtk_information_vector.h  vtk_information_vector.rs.h  vtk_mapper.h  vtk_named_colors.h  vtk_named_colors.rs.h  vtk_object.h  vtk_object.rs.h  vtk_object_base.h  vtk_object_base.rs.h  vtk_poly_data.h  vtk_poly_data.rs.h  vtk_poly_data_algorithm.h  vtk_poly_data_algorithm.rs.h  vtk_poly_data_mapper.h  vtk_poly_data_mapper.rs.h  vtk_sphere.h  vtk_sphere.rs.h  vtk_sphere_source.h  vtk_sphere_source.rs.h
libvtkrs/src/: cxx_sphere.cpp  main.cpp  named_colors.cpp  poly_data_mapper.cpp  sphere.cpp  sphere_source.cpp  vtkPolyDataMapper.cpp  vtk_abstract_mapper_3d.cpp  vtk_algorithm.cpp  vtk_algorithm_output.cpp  vtk_data_object.cpp  vtk_information.cpp  vtk_named_colors.cpp  vtk_object.cpp  vtk_object_base.cpp  vtk_poly_data.cpp  vtk_poly_data_mapper.cpp  vtk_sphere.cpp  vtk_sphere_source.cpp
src/: lib.rs  macros.rs  main.rs  object_base.rs  vtk_abstract_mapper.rs  vtk_algorithm.rs  vtk_algorithm_output.rs  vtk_data_object.rs  vtk_executive.rs  vtk_information.rs  vtk_information_vector.rs  vtk_named_colors.rs  vtk_object.rs  vtk_object_base.rs  vtk_poly_data.rs  vtk_poly_data_algorithm.rs  vtk_poly_data_mapper.rs  vtk_sphere.rs  vtk_sphere_source.rs
vtk-gen/: Cargo.toml
vtk-gen/Default/: Cargo.toml
vtk-gen/src/: code_gen_cpp.rs  inheritance_hierarchy.rs  intermediate_representation.rs  main.rs  parse_cpp.rs  parse_wrap_vtk_xml.rs  plot.py
vtk-rs/: Cargo.toml  TODO.md  build.rs
vtk-rs-9.1/libvtkrs/include/: vtk_common_core.h  vtk_common_data_model.h  vtk_common_misc.h
vtk-rs-9.1/libvtkrs/src/: vtk_common_misc.cpp  vtk_common_transforms.cpp
vtk-rs-9.1/src/: lib.rs  vtkCommonArchive.rs  vtkCommonColor.rs  vtkCommonComputationalGeometry.rs  vtkCommonDataModel.rs  vtkCommonMath.rs  vtkCommonSystem.rs  vtkCommonTransforms.rs
vtk-rs-link/: Cargo.toml
vtk-rs-link/src/: lib.rs
vtk-rs/libvtkrs/: CMakeLists.txt
vtk-rs/libvtkrs/include/: vtk_abstract_mapper.rs.h  vtk_algorithm.rs.h  vtk_algorithm_output.h  vtk_algorithm_output.rs.h  vtk_common_archive.h  vtk_common_color.h  vtk_common_computational_geometry.h  vtk_common_core.h  vtk_common_data_model.h  vtk_common_execution_model.h  vtk_common_math.h  vtk_common_system.h  vtk_common_transforms.h  vtk_data_object.rs.h  vtk_executive.h  vtk_executive.rs.h  vtk_information.rs.h  vtk_information_vector.rs.h  vtk_mapper.rs.h  vtk_named_colors.rs.h  vtk_object.h  vtk_object.rs.h  vtk_object_base.rs.h  vtk_poly_data.h  vtk_poly_data.rs.h  vtk_poly_data_algorithm.rs.h  vtk_poly_data_mapper.rs.h  vtk_sphere.h  vtk_sphere.rs.h  vtk_sphere_source.h  vtk_sphere_source.rs.h
vtk-rs/libvtkrs/src/: vtk_abstract_mapper.cpp  vtk_algorithm_output.cpp  vtk_common_archive.cpp  vtk_common_color.cpp  vtk_common_computational_geometry.cpp  vtk_common_core.cpp  vtk_common_data_model.cpp  vtk_common_execution_model.cpp  vtk_common_math.cpp  vtk_common_system.cpp  vtk_data_object.cpp  vtk_executive.cpp  vtk_information_vector.cpp  vtk_mapper.cpp  vtk_object_base.cpp  vtk_poly_data.cpp  vtk_poly_data_algorithm.cpp  vtk_sphere.cpp
vtk-rs/src/: lib.rs  macros.rs  vtkCommonComputationalGeometry.rs  vtkCommonCore.rs  vtkCommonDataModel.rs  vtkCommonExecutionModel.rs  vtkCommonMath.rs  vtkCommonMisc.rs  vtkCommonSystem.rs  vtk_abstract_mapper_3d.rs  vtk_algorithm_output.rs  vtk_information.rs  vtk_mapper.rs  vtk_object_base.rs  vtk_poly_data_algorithm.rs  vtk_poly_data_mapper.rs  vtk_sphere.rs  vtk_sphere_source.rs
vtk-wrap/: Cargo.toml  README.md
vtk-wrap/Default/: Cargo.toml  build.rs
vtk-wrap/src/: code_gen.rs  code_gen_cpp.rs  code_gen_old.rs  code_gen_rust.rs  inheritance_hierarchy.rs  intermediate.rs  intermediate_representation.rs  main.rs  parse_cpp.rs  parse_wrap_vtk_xml.rs  parsing.rs
