[package]
name = "vtk-rs"
version = "0.1.1"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Rust bindings for the Visualization Toolkit (VTK)"
repository = "https://github.com/jonaspleyer/vtk-rs"
links = "vtk"

[build-dependencies]
cmake = "0.1.54"

[dev-dependencies]
approx = { package = "approxim", version = "0.6.4", features = ["array_impl"]}

[features]
default = []
vtk9-4 = []
vtk9-3 = []
vtk9-2 = []
vtk9-1 = []
vtk9-0 = []
vtk8-2 = []
vtk8-1 = []
vtk8-0 = []
vtk7-1 = []
vtk7-0 = []
vtk6-3 = []
vtk6-2 = []
vtk6-1 = []
vtk6-0 = []
vtk5-10 = []
vtk5-8 = []
vtk5-6 = []
vtk5-4 = []
vtk5-2 = []
vtk5-0 = []
