[package]
name = "vtk-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cargo_toml = "0.22.3"
clap = { version = "4.5.54", features = ["derive"] }
convert_case = "0.10.0"
glob = "0.3.2"
log = "0.4.27"
pretty_env_logger = "0.5.0"
prettyplease = { version = "0.2.33", features = ["verbatim"] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
syn = "2.0.101"
toml = "0.9.11"
