[package]
name = "vtk-rs-link"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Rust bindings for the Visualization Toolkit (VTK)"
repository = "https://github.com/jonaspleyer/vtk-rs"

[build-dependencies]
cmake = "0.1.54"
glob = "0.3.2"
regex = "1.11.1"

[features]
v094 = []

[dependencies]
glob = "0.3.2"
log = "0.4.29"
regex = "1.11.1"
