[package]
name = "vtk-rs"
version = "0.3.0"
edition = "2024"
build = "build.rs"
description = "Rust bindings for the Visualization Toolkit (VTK)"
license = "MIT"
repository = "https://github.com/jonaspleyer/vtk-rs"

[dev-dependencies.approx]
version = "0.6.4"
package = "approxim"
features = ["array_impl"]

[build-dependencies]
cmake = "0.1.54"
vtk-rs-link = "0.3.1"
